@@ -1,3 +1,8 @@
+2018-09-10  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/85395
+	* gfortran.dg/proc_ptr_comp_52.f90: New test case.
+
 2018-09-08  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/87150 - wrong ctor with maybe-rvalue semantics.
